# Coeus

./: .gitignore  .travis.yml  CMakeLists.txt  Coeus.sln  Docker.mk  Dockerfile  Makefile  README.md  Templates.mk
CSL/: CSL.hpp  CSL.mk
CSL/src/: CSL.cpp
Common/: Common.mk  Common.vcxproj  Common.vcxproj.filters  ConfigParser.cpp  ConfigParser.hpp  Event.hpp  Functions.cpp  Functions.hpp
Common/conf/: test.cfg  testinc.cfg
Common/src/: ArgParser.cpp  ArgParser.hpp  Functions.hpp  ICommandSource.hpp  Platform.hpp  SocketCommandSource.hpp  Test.cpp
FTP/: Config.cpp  Config.hpp  Constants.hpp  Dockerfile  FTP.mk  FTP.vcxproj  FTP.vcxproj.filters  FTPServer.cpp  FTPServer.hpp  FTPWorker.cpp  FTPWorker.hpp  Main.cpp  Server.cpp  Server.hpp  Worker.cpp  Worker.hpp  cftp.cfg
FTP/Private/: config.c  config.h  connection.c  connection.h  main.c  server.c  server.h  worker.c  worker.h
FTP/conf/: main.cfg
FTP/src/: FTPConfig.cpp  FTPConfig.hpp  FTPConnection.cpp  FTPConnection.hpp  FTPServer.cpp  FTPServer.hpp  FTPWorker.cpp  FTPWorker.hpp  Main.cpp  Test.cpp
HTTP/: Config.cpp  Config.hpp  Dockerfile  HTTP.mk  HTTPServer.cpp  HTTPServer.hpp  HTTPWorker.cpp  HTTPWorker.hpp  Main.cpp  Server.cpp  Server.hpp  Worker.cpp  Worker.hpp
Mail/: Config.hpp  IMAPServer.cpp  IMAPServer.hpp  Mail.mk  Main.cpp  POPServer.cpp  POPServer.hpp  POPWorker.hpp  SMTPServer.cpp  SMTPServer.hpp  SMTPWorker.cpp  SMTPWorker.hpp
Test/: Test.mk  http.py  test.sh
Util/: CMakeLists.txt
Util/Private/: log.c  socket.c  thread.c  util.c
Util/Public/: log.h  socket.h  thread.h  util.h
(+49 files in other folders)
